// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when there are no items 1`] = `
Array [
  <b
    className="chakra-text css-1ezsviu"
  />,
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    />
  </div>,
]
`;

exports[`renders when there are two items 1`] = `
Array [
  <b
    className="chakra-text css-1ezsviu"
  >
    Har positiv virkning til:
  </b>,
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-ovkaj3"
        onClick={[Function]}
        type="button"
      >
        he11i
      </button>
      <button
        className="chakra-button css-12ybw9u"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
    </ul>
  </div>,
]
`;

exports[`renders when there is one item 1`] = `
Array [
  <b
    className="chakra-text css-1ezsviu"
  >
    Har positiv virkning til:
  </b>,
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-12ybw9u"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
    </ul>
  </div>,
]
`;
